# repo-insight-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
repo_insight/: __init__.py  analyzer.py  config.py  git_service.py  models.py  scanner.py
tests/: test_analyzer.py  test_git_service.py  test_scanner.py
