[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-insight-agent"
version = "0.1.0"
description = "A Streamlit agent that explains GitHub repositories with OpenAI."
requires-python = ">=3.10"
dependencies = [
  "openai>=2.11.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "streamlit>=1.41.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["repo_insight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

